--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -2,10 +2,12 @@ html {
     background-color: rgba(27, 38, 54, 1);
     text-align: center;
     color: white;
+    overflow: hidden;
 }
 
 body {
     margin: 0;
+    padding: 0;
     color: white;
     font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -18,15 +20,4 @@ body {
     font-weight: 400;
     src: local(""),
     url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
-}
-
-.btn {
-    background-color: rgba(27, 38, 54, 1);
-    color: white;
-    border: 1px solid white;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-    font-size: 1.2rem;
-    cursor: pointer;
 }
